--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000/",
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
