--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading": "^2.0.3",
@@ -50,8 +52,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "proxy": "http://127.0.0.1:5000"
 }
