--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"mongoose": "^6.3.6",
 		"node-fetch": "^3.2.5",
 		"nodemailer": "^6.7.5",
+		"react-helmet": "^6.1.0",
 		"react-loading": "^2.0.3",
 		"react-redux": "^8.0.2",
 		"redux": "^4.2.0",
