--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.15.1",
+    "react-multi-select-component": "^4.2.9",
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "swiper": "^8.3.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
