--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@reduxjs/toolkit": "^1.8.2",
 		"axios": "^0.27.2",
 		"bcrypt": "^5.0.1",
+		"bootstrap": "^5.2.0",
 		"cloudinary": "^1.30.0",
 		"concurrently": "^7.2.1",
 		"cookie-parser": "^1.4.6",
@@ -37,6 +38,7 @@
 		"mongoose": "^6.3.6",
 		"node-fetch": "^3.2.5",
 		"nodemailer": "^6.7.5",
+		"react-bootstrap": "^2.4.0",
 		"react-helmet": "^6.1.0",
 		"react-loading": "^2.0.3",
 		"react-redux": "^8.0.2",
