--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"axios": "^0.27.2",
 		"bcrypt": "^5.0.1",
 		"bootstrap": "^5.2.0",
+		"classnames": "^2.3.1",
 		"cloudinary": "^1.30.0",
 		"concurrently": "^7.2.1",
 		"cookie-parser": "^1.4.6",
@@ -34,6 +35,7 @@
 		"express-fileupload": "^1.4.0",
 		"googleapis": "^101.0.0",
 		"http-proxy-middleware": "^2.0.6",
+		"js-cookie": "^3.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.6",
 		"node-fetch": "^3.2.5",
